# fractal-new1

./: codebase-directory.txt  deployment.txt  narrative.txt  recreate_codebase.py  tech_architecture-part1.txt  tech_architecture-part2.txt  user-interface.txt
fractal-main/: .gitignore  README.md  build_wasm.sh
fractal-main/.github/workflows/: deploy.yml
fractal-main/core-engine/: Cargo.toml
fractal-main/core-engine/src/: clp.rs  drain.rs  grammar.rs  lib.rs
fractal-main/docs/: DEPLOYMENT.txt  DESCRIPTION.txt  NARRATIVE.txt  TECH ARCHITECTURE.txt  USER-INTERFACE.txt  codebase-directory.txt
fractal-main/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
fractal-main/frontend/public/: production-logs-shard-01.json  sample.txt
fractal-main/frontend/public/wasm/: sentinel_protocol_core_bg.wasm
fractal-main/frontend/src/app/: globals.css  layout.tsx  page.tsx
fractal-main/frontend/src/app/api/ingest/: route.ts
fractal-main/frontend/src/components/: CanvasMatrixRain.tsx  CommandDeck.tsx  New Text Document.txt  ReportCardModal.tsx  SchemaConsole.tsx  Scoreboard.tsx  TheReactorGraph.tsx  TheTrickleStream.tsx
fractal-main/frontend/src/hooks/: useFractal.ts
fractal-main/frontend/src/utils/: GreenOpsEngine.ts
fractal-main/frontend/src/wasm/: package.json  sentinel_protocol_core.d.ts  sentinel_protocol_core.js  sentinel_protocol_core_bg.wasm  sentinel_protocol_core_bg.wasm.d.ts
fractal-main/frontend/src/workers/: fractal.worker.ts
