
[package]
name = "sentinel_protocol_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
lz4_flex = "0.11" # Pure Rust LZ4 implementation
console_error_panic_hook = "0.1.7" # Browser panic logging
bincode = "1.3" # Added for serializing the engine state into .fractal files

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" # Aggressive Edge optimization: strips stack-unwinding bloat
